--- a/src/main/resources/templates/new_chat.html
+++ b/src/main/resources/templates/new_chat.html
@@ -125,7 +125,7 @@
 <script th:inline="javascript">
     $(document).ready(function(){
 
-        const username = "userName";
+        const username = "a123123";
 
         $("#disconn").on("click", (e) => {
             disconnect();
@@ -140,6 +140,30 @@
                 send();
             });
         });
+
+        const url = "/api/member/info";
+        fetch(url, {
+            method: "GET",
+            headers: {"Content-Type": "application/json"}
+
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json(); // JSON 데이터를 Promise로 반환
+        })
+        .then(data => {
+            // JSON 데이터를 받아와서 처리
+            console.log('받아온 객체:', data);
+            username = data.userId;
+        })
+        .catch(error => {
+            console.error('데이터를 가져오는 중 오류 발생:', error);
+            // 오류 처리 (예: 사용자에게 오류 메시지 표시)
+        });
+
+
 
         const websocket = new WebSocket("ws://localhost:8080/ws/chat");
 
@@ -190,7 +214,7 @@
             console.log("cur_session : " + cur_session);
 
             //로그인 한 클라이언트와 타 클라이언트를 분류하기 위함
-            if(sessionId == cur_session){
+            if(sessionId != cur_session){
                 var str = '<div class="d-flex justify-content-end mb-4">';
                 str += '<div class="msg_cotainer_send">';
                 str += message;
